[build-system]
requires = ["poetry-core>=1.2.0",]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "PyTDL"
version = "0.1.0"
description = "Yet another YouTube video downloader made with Python."

packages = [
    { include = "pytdl", from = "src" },
]

authors = ["Amose Buzzi <buzziamose@gmail.com>",]

license = "GPL-3.0-or-later"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10.0,<3.14.0"
customtkinter = "^5.0.0"
moviepy = "^2.2.1"
pytubefix = "^10.3.6"
urllib3 = "^2.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.1"
ruff = "^0.14.10"
pyinstaller = "^6.11.0"


[tool.ruff]
select = ["ALL"]
ignore = [
    "D203",    # One blank line before class docstring
    "D212",    # Multi-line summary first line
    "PLR0913", # Too many arguments
    "Q000",    # Single quotes found but double quotes preferred
]
ignore-init-module-imports = true
line-length = 120
# preview = true
show-fixes = true
src = ["src",]
target-version = "py38"


[tool.ruff.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15


[tool.ruff.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
"__init__.py" = ["F401","F403","F405",]
"tests/*" = ["ANN", "ARG", "INP001", "S101",]


[tool.ruff.pylint]
max-args = 15
max-branches = 20
max-returns = 10
max-statements = 80


[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
